apps/docs/versioned_docs/version-1.0.2/layouts/box.mdx
---
sidebar_position: 2
title: Box
description: A general-purpose layout component for wrapping content with customizable styling options.
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import { Box } from '@site/src/components/UI/box';
import BoxDemo from '@site/src/components/Demo/BoxDemo';

## Overview

Box is a flexible layout component for wrapping content with customizable width, height, padding, background, border radius, and shadow. Use it for cards, containers, wrappers, and more.

## Preview

<Tabs defaultValue="preview">
  <TabItem value="preview" label="Preview" default>
    <div className="flex items-center gap-8 border rounded-lg p-4">
      <Box
        width="large"
        height="normal"
        padding="lg"
        background="white"
        rounded="lg"
        shadow="medium"
      >
        <h2 className="font-bold text-lg mb-2">Box Component</h2>
        <p>This is a general-purpose content box.</p>
      </Box>
      <Box
        width="small"
        height="lg"
        padding="sm"
        background="secondary"
        rounded="full"
        shadow="strong"
      >
        <span className="text-primary font-semibold text-center block">Small Box</span>
      </Box>
    </div>
  </TabItem>
  <TabItem value="code" label="Code">
    ```tsx
    import { Box } from '@mindfiredigital/ignix-ui';

    function BoxDemo() {
      return (
        <div className="flex items-center gap-8">
          <Box
            width="large"
            height="normal"
            padding="lg"
            background="white"
            rounded="lg"
            shadow="medium"
          >
            <h2 className="font-bold text-lg mb-2">Box Component</h2>
            <p>This is a general-purpose content box.</p>
          </Box>
          <Box
            width="small"
            height="lg"
            padding="sm"
            background="secondary"
            rounded="full"
            shadow="strong"
          >
            <span className="text-primary  font-semibold">Small Box</span>
          </Box>
        </div>
      );
    }
    ```
  </TabItem>
</Tabs>

## Installation

<Tabs>
  <TabItem value="npm" label="npm" default>
    ```bash
    npx @mindfiredigital/ignix-ui add box
    ```
  </TabItem>
  <TabItem value="yarn" label="Yarn">
    ```bash
    yarn @mindfiredigital/ignix-ui add box
    ```
  </TabItem>
  <TabItem value="pnpm" label="pnpm">
    ```bash
    pnpm @mindfiredigital/ignix-ui add box
    ```
  </TabItem>
</Tabs>

## Usage

Import the component:

```tsx
import { Box } from './components/ui';
```

### Basic Usage

```tsx
function BasicBox() {
  return (
    <Box
      width="full"
      padding="normal"
      background="white"
      rounded="md"
      shadow="subtle"
    >
      <h2>Box Component</h2>
      <p>This is a general-purpose content box.</p>
    </Box>
  );
}
```

## Variants

<BoxDemo />

## Props

| Prop        | Type    | Default   | Description                                      |
|-------------|---------|-----------|--------------------------------------------------|
| width       | string  | "normal"  | Width: "auto", "small", "normal", "large", "full", or custom |
| height      | string  | "auto"    | Height: "auto", "small", "normal", "large", "screen", or custom |
| padding     | string  | "normal"  | Padding: "none", "sm", "normal", "lg"            |
| background  | string  | "white"   | Background color (from theme or custom)           |
| rounded     | string  | "md"      | Border radius: "none", "sm", "md", "lg", "full"   |
| shadow      | string  | "subtle"  | Box shadow: "none", "subtle", "medium", "strong"  |
| className   | string  |           | Additional CSS classes                            |
| children    | node    |           | Content inside the box                            |

## Use Cases
- Cards
- Content blocks
- Wrappers
- Styled containers
