apps/docs/versioned_docs/version-1.0.3/layouts/box.mdx
---
sidebar_position: 2
title: Box
description: A general-purpose layout component for wrapping content with customizable styling options.
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import { Box } from '@site/src/components/UI/box';
import BoxDemo from '@site/src/components/Demo/BoxDemo';

## Overview

Box is a flexible layout component for wrapping content with customizable width, height, padding, background, border radius, and shadow. Use it for cards, containers, wrappers, and more.

## Preview

<Tabs defaultValue="preview">
  <TabItem value="preview" label="Preview" default>
    <div className="flex items-center gap-8 border rounded-lg p-4">
      <Box
        width="large"
        height="normal"
        padding="lg"
        background="default"
        rounded="lg"
        shadow="medium"
        className="border"
      >
        <h2 className={`font-bold text-lg mb-2`}>Box Component</h2>
        <p>This is a general-purpose content box.</p>
      </Box>
    </div>
  </TabItem>
  <TabItem value="code" label="Code">
    ```tsx
    import { Box } from '@mindfiredigital/ignix-ui';

    function BoxDemo() {
      return (
        <div className="flex items-center gap-8">
          <Box
            width="large"
            height="normal"
            padding="lg"
            background="default"
            rounded="lg"
            shadow="medium"
          >
            <h2 className="font-bold text-lg mb-2">Box Component</h2>
            <p>This is a general-purpose content box.</p>
          </Box>
          <Box
            width="small"
            height="lg"
            padding="sm"
            background="secondary"
            rounded="full"
            shadow="strong"
          >
            <span className="text-primary  font-semibold">Small Box</span>
          </Box>
        </div>
      );
    }
    ```
  </TabItem>
</Tabs>

## Installation

<Tabs>
  <TabItem value="npm" label="npm" default>
    ```bash
    npx @mindfiredigital/ignix-ui add box
    ```
  </TabItem>
  <TabItem value="yarn" label="yarn">
    ```bash
    yarn @mindfiredigital/ignix-ui add box
    ```
  </TabItem>
  <TabItem value="pnpm" label="pnpm">
    ```bash
    pnpm @mindfiredigital/ignix-ui add box
    ```
  </TabItem>
  <TabItem value="manual" label="manual" className="max-h-[500px] overflow-y-auto">

    ```tsx
import React from "react";
import clsx from "clsx";

export type BoxProps = {
  children: React.ReactNode;
  width?: "auto" | "small" | "normal" | "large" | "full" | string;
  height?: "auto" | "small" | "normal" | "large" | "screen" | string;
  padding?: "none" | "sm" | "normal" | "lg";
  background?: string;
  rounded?: "none" | "sm" | "md" | "lg" | "full";
  shadow?: "none" | "subtle" | "medium" | "strong";
  className?: string;
};

const widthMap: Record<string, string> = {
  auto: "w-auto",
  small: "w-32",
  normal: "w-64",
  large: "w-96",
  full: "w-full",
};
const heightMap: Record<string, string> = {
  auto: "h-auto",
  small: "h-16",
  normal: "h-32",
  large: "h-64",
  screen: "h-screen",
};
const paddingMap: Record<string, string> = {
  none: "p-0",
  sm: "p-2",
  normal: "p-4",
  lg: "p-8",
};
const roundedMap: Record<string, string> = {
  none: "rounded-none",
  sm: "rounded-sm",
  md: "rounded-md",
  lg: "rounded-lg",
  full: "rounded-full",
};
const shadowMap: Record<string, string> = {
  none: "shadow-none",
  subtle: "shadow-sm",
  medium: "shadow-md",
  strong: "shadow-lg",
};

const Box: React.FC<BoxProps> = ({
  children,
  width = "normal",
  height = "auto",
  padding = "normal",
  background = "white",
  rounded = "md",
  shadow = "subtle",
  className,
}) => {
  const widthClass = widthMap[width] || width;
  const heightClass = heightMap[height] || height;
  const paddingClass = paddingMap[padding] || padding;
  const roundedClass = roundedMap[rounded] || rounded;
  const shadowClass = shadowMap[shadow] || shadow;
  const bgClass = background ? `bg-${background}` : "";

  return (
    <div
      className={clsx(
        widthClass,
        heightClass,
        paddingClass,
        roundedClass,
        shadowClass,
        bgClass,
        className
      )}
    >
      {children}
    </div>
  );
};

export { Box };

    ```
  </TabItem>
</Tabs>

## Usage

Import the component:

```tsx
import { Box } from './components/ui';
```

### Basic Usage

```tsx
function BasicBox() {
  return (
    <Box
      width="full"
      padding="normal"
      background="default"
      rounded="md"
      shadow="subtle"
    >
      <h2>Box Component</h2>
      <p>This is a general-purpose content box.</p>
    </Box>
  );
}
```

## Variants

<BoxDemo />

## Props

| Prop        | Type    | Default   | Description                                      |
|-------------|---------|-----------|--------------------------------------------------|
| width       | string  | "normal"  | Width: "auto", "small", "normal", "large", "full", or custom |
| height      | string  | "auto"    | Height: "auto", "small", "normal", "large", "screen", or custom |
| padding     | string  | "normal"  | Padding: "none", "sm", "normal", "lg"            |
| background  | string  | "white"   | Background color (from theme or custom)           |
| rounded     | string  | "md"      | Border radius: "none", "sm", "md", "lg", "full"   |
| shadow      | string  | "subtle"  | Box shadow: "none", "subtle", "medium", "strong"  |
| className   | string  |  null      | Additional CSS classes                            |
| children    | node    |  null     | Content inside the box                            |

## Use Cases
- Cards
- Content blocks
- Wrappers
- Styled containers
